--- a/views/layouts/application.html.erb
+++ b/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <p>
       <h3> I'm a header</h3>
       <p>Put things in the header</p>
-      <a href='me.html'>Me</a>
+      <a href="http://google.com">This is a link to google</a>
 
     </p>
     <hr />
